--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -310,7 +310,7 @@
                     <div class="container custom-padding-top-1 custom-padding-bottom-1 px-lg-5 bg-light">
                         <div class="row px-lg-3">
                             <div class="col">
-                                <p class="text-4-5 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-4">Cras a elit sit amet leo accumsan volutpat. Suspendisse hendreriast ehicula leo, vel efficitur felis ultrices non. Cras a elit sit amet leo acun volutpat. Suspendisse hendrerit vehicula leo, vel efficitur fel. </p>
+                                <p class="text-4-5 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-4">Combinamos tradição e inovação para oferecer soluções jurídicas que protegem e impulsionam nossos clientes. Cada caso é uma oportunidade para criar estratégias únicas e superar expectativas.</p>
                             </div>
                         </div>
                         <div class="row px-lg-3 py-4">
@@ -319,28 +319,33 @@
                             </div>
                             <div class="col-lg-6 ps-lg-4">
 
-                                <p class="text-4 line-height-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dictum eleifend eros a pharetra. Cras aliquam vestibulum vehicula. Sed sed lectus risus. Vestibulum maximus ac purus in euismod. In venenatis tellus ante, id porta risus semper quis. Aenean vel posuere urna, sit amet placerat massa. Quisque efficitur interdum libero, sed dictum lorem euismod sed.</p>
+                                <p class="text-4 line-height-7">O <strong>Correia & Vieira de Carvalho Advogados</strong> é um escritório que une três gerações de experiência jurídica com uma abordagem estratégica e multidisciplinar. Atuamos em áreas como Direito Público, Empresarial, Médico, Propriedade Intelectual e muito mais, atendendo empresas, <strong>pessoas físicas</strong> e <strong>instituições</strong> com excelência e comprometimento.</p>
 
-                                <p class="text-4 line-height-7">Aenean vel posuere urna, sit amet placerat massa. Quisque efficitur interdum libero, sed dictum lorem euismod sed.</p>
 
 								<div class="d-block">
 									<div class="toggle toggle-minimal toggle-dark" data-plugin-toggle>
 										<section class="toggle">
-											<a class="toggle-title text-dark text-4">What We Do</a>
+											<a class="toggle-title text-dark text-4">Sobre nós</a>
 											<div class="toggle-content">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. </p>
+												<p>O <strong>Correia & Vieira de Carvalho Advogados</strong> é fruto da união de <strong>três gerações</strong> de profissionais, comprometidos com um atendimento jurídico técnico e diferenciado. Atuamos com uma abordagem estratégica e multidisciplinar, garantindo soluções jurídicas que protegem os interesses de nossos clientes e promovem sua segurança em decisões complexas. Atendemos <strong>empresas</strong> de <strong>diversos portes</strong>, <strong>pessoas físicas</strong> e <strong>instituições</strong>, sempre priorizando a transparência e a confiança.</p>
 											</div>
 										</section>
 										<section class="toggle">
-											<a class="toggle-title text-dark text-4">Pro Experience</a>
+											<a class="toggle-title text-dark text-4">Nossa História</a>
 											<div class="toggle-content">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis quam sit.</p>
+												<p>Fundado com a base sólida de três gerações de advogados, o <strong>Correia & Vieira de Carvalho Advogados</strong> carrega um legado de excelência e inovação. Desde a sua criação, o escritório se destaca pela capacidade de aliar tradição jurídica e uma visão estratégica para oferecer <strong>soluções robustas e eficazes</strong>.</p>
+
+												<p>Com atuação em demandas preventivas e na resolução de questões complexas, o escritório está preparado para atender com eficiência as mais diversas áreas do Direito. Cada cliente é tratado de forma única, com foco em <strong>superar expectativas</strong> e garantir segurança jurídica em suas decisões.</p>
 											</div>
 										</section>
 										<section class="toggle">
-											<a class="toggle-title text-dark text-4">Partners and Investors</a>
+											<a class="toggle-title text-dark text-4">Sobre os Sócios</a>
 											<div class="toggle-content">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Nullam tortor nunc, bibendum vitae semper a, volutpat eget massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fringilla, orci sit amet posuere auctor, orci eros pellentesque odio, nec pellentesque erat ligula nec massa. Aenean consequat lorem ut felis ullamcorper posuere gravida tellus faucibus. Maecenas dolor elit, pulvinar eu vehicula eu, consequat et lacus. Duis et purus ipsum. In auctor mattis ipsum id molestie. Donec risus nulla, fringilla a rhoncus vitae, semper a massa. Vivamus ullamcorper, enim sit amet consequat laoreet, tortor tortor dictum urna, ut egestas urna ipsum nec libero. Nulla justo leo, molestie vel tempor nec, egestas at massa. Aenean pulvinar, felis porttitor iaculis pulvinar, odio orci sodales odio, ac pulvinar felis quam sit.</p>
+												<p><strong class="text-color-primary">Milene Correia:</strong></a> Especialista em <strong>Propriedade Intelectual</strong>, <strong>Direito Médico</strong> e <strong>Empresarial</strong>, Milene combina visão estratégica e foco técnico para litígios e consultorias. Reconhecida por sua habilidade em resolver conflitos, ela atua diretamente no atendimento personalizado dos clientes.</p>
+												
+												<p><strong class="text-color-primary">Paulo Cesar Vieira de Carvalho:</strong> Com sólida experiência em <strong>Direito Empresarial</strong> e <strong>Processual Civil</strong>, Paulo Cesar se destaca pela estruturação de negócios, proteção de marcas e soluções voltadas à inovação jurídica.</p>
+												
+												<p><strong class="text-color-primary">Maria Aparecida Correia:</strong> Referência em Direito <strong>Educacional</strong>, <strong>Urbanístico</strong> e <strong>Cível</strong>, Maria Aparecida traz, também, vasta experiência em <strong>sucessões</strong>, <strong>inventários</strong> e <strong>proteção patrimonial</strong>. Sua abordagem une técnica e sensibilidade, garantindo um atendimento próximo e eficiente.</p>
 											</div>
 										</section>
 									</div>
