--- a/index.html
+++ b/index.html
@@ -616,11 +616,10 @@
 									<p class="text-4-5 line-height-7 pb-1 mb-4 mb-lg-2 mb-xl-4 appear-animation text-grey-100" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="500">Aplicamos conhecimento e visão estratégica para oferecer respostas jurídicas claras e eficazes, sempre alinhadas às suas metas. </p>
 
 									<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="450">
-										<span class="badge bg-primary--100 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">10+ years experience</span>
-										<span class="badge bg-primary--200 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Market-Focused</span>
-										<span class="badge bg-primary--300 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Top expertise</span>
-										<span class="badge bg-primary--100 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Corporate Investors</span>
-										<span class="badge bg-primary--200 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Integrity & Innovation</span>
+										<span class="badge bg-primary--100 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Tradição consolidada</span>
+										<span class="badge bg-primary--200 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Visão estratégica</span>
+										<span class="badge bg-primary--300 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Transparência absoluta</span>
+										<span class="badge bg-primary--100 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Expertise técnica</span>
 									</div>
 
 								</div>
@@ -800,7 +799,7 @@
 						<div class="col-lg-6 mt-lg-5 pt-lg-3">
 							<div class="row mb-5-5">
 								<div class="col-md-4 mb-4 mb-lg-0">
-									<h4 class="text-color-light font-weight-bold mb-3">Escritório</h4>
+									<h4 class="text-color-light font-weight-bold mb-3">Atalhos</h4>
 									<ul class="list list-unstyled text-3-5">
 										<li><a href="index.html" class="text-color-grey text-color-hover-primary">Home</a></li>
 										<li><a href="demo-creative-agency-2-about-us.html" class="text-color-grey text-color-hover-primary">Sobre nós</a></li>
@@ -808,28 +807,20 @@
 									</ul>
 								</div>
 								<div class="col-md-4 mb-4 mb-lg-0">
-									<h4 class="text-color-light font-weight-bold mb-3">Solutions</h4>
+									<h4 class="text-color-light font-weight-bold mb-3">Outros</h4>
 									<ul class="list list-unstyled text-3-5">
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Brand Development</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Graphic Design</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">UX Design</a></li>
+										<li><a href="demo-creative-agency-2-contact-us.html" class="text-color-grey text-color-hover-primary">Contate-nos</a></li>
 									</ul>
 								</div>
-								
 							</div>
+
 							<div class="row">
-								<!--<div class="col">
-									<h4 class="text-color-light font-weight-bold mb-3">Blog</h4>
-									<a href="#"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Web Design</span></a>
-									<a href="#"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">CMS</span></a>
-									<a href="#"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">SEO</span></a>
-									<a href="#"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">User Experience (UX) Design</span></a>
-									<a href="#"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Social Media Marketing</span></a>
-									<a href="#"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Website Development</span></a>
-									<a href="#"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">E-commerce Strategies</span></a>
-									<a href="#"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Mobile Applications</span></a>
-									<a href="#"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Website Maintenance</span></a>
-								</div>-->
+								<div class="col">
+									<h4 class="text-color-light font-weight-bold mb-3">Artigos</h4>
+									<a href="https://www.estadao.com.br/politica/blog-do-fausto-macedo/os-desafios-da-propriedade-intelectual-no-ambiente-metaverso/" target="_blank"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Propriedade Intelectual no Metaverso</span></a>
+									<a href="https://www.estadao.com.br/politica/blog-do-fausto-macedo/a-ilimitacao-de-uso-da-bandeira-nacional/"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2" target="_blank">(i)Limitação de Uso da Bandeira Nacional</span></a>
+									<a href="https://www.estadao.com.br/politica/blog-do-fausto-macedo/a-importancia-do-registro-de-marca-e-o-seu-reconhecimento-como-patrimonio-empresarial/" target="_blank"><span class="badge bg-dark--100 font-weight-normal text-2 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2">Importância do registro de marca</span></a>
+								</div>
 							</div>
 						</div>
 					</div>
