--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>CVCAdv - Sobre nós</title>	
+		<title>CVCA - Sobre nós</title>	
 
 		<meta name="keywords" content="WebSite Template" />
 		<meta name="description" content="Porto - Multipurpose Website Template">
