--- a/demo-creative-agency-2-contact-us.html
+++ b/demo-creative-agency-2-contact-us.html
@@ -140,7 +140,7 @@
                                 <p class="text-4-5 line-height-7 text-dark pb-1 mb-4 mb-lg-2 mb-xl-4">Estamos à disposição para atender você com excelência. Utilize nossos canais de atendimento, como telefone, e-mail e redes sociais, e conte com nossa equipe para oferecer o suporte jurídico que você precisa com agilidade, precisão e atenção personalizada.</p>
                             </div>
                         </div>                       
-                        <div class="row px-lg-3 pb-2 mb-4">
+                        <div class="row px-lg-3 pb-2">
                             <div class="col-lg-6 mb-4 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0">
                                 <div class="row">
                                     <div class="col-auto">
@@ -164,9 +164,9 @@
                                 </span>
                             </div>
                         </div>
-                        <div class="row px-lg-3 mb-3">
+                        <div class="row px-lg-3 mb-4">
                             <div class="mb-4 mb-lg-0 appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="300">
-                                <h2 class="font-weight-bold text-color-dark text-6 mb-3">Nossas redes</h2>
+                                <h3 class="d-block text-color-grey positive-ls-3 font-weight-medium text-2 mb-1">nossas redes</h3>
                                 <a href="https://www.facebook.com/correiaecorreiaadvogados"><span class="badge bg-primary-200 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2"><i class="fab fa-facebook-f text-color-light"></i></span></a>
 								
 								<a href="https://www.instagram.com/cvcadv/"><span class="badge bg-secondary--200 font-weight-normal text-3-5 badge-md anim-hover-translate-top-5px transition-2ms me-2 mb-2"><i class="fab fa-instagram text-color-light me-4"></i>@cvcadv</span></a>
