--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -201,22 +201,112 @@
 							<div class="marquee custom-marquee-1 pt-4 d-flex" data-duration="40000" data-gap="10" data-duplicated="true" data-startVisible="true">
 								<span class="d-flex align-items-center" data-clone-element="2">
 									<div class="px-5 py-1">
-										<img src="img/logos/logo-8.png" alt="" class="img-fluid" style="max-width: 90px;">
+										<a href="https://nelsonpneus.com.br" target="_blank"><img src="img/logos/logo-1.png" alt="Nelson Pneus" class="img-fluid" style="max-width: 90px;"></a>
 									</div>
 									<div class="px-5 py-1">
-										<img src="img/logos/logo-9.png" alt="" class="img-fluid" style="max-width: 140px;">
+										<a href="https://www.confeitariadocemagia.com.br" target="_blank"><img src="img/logos/logo-2.png" alt="Doce Magia" class="img-fluid" style="max-width: 90px;"></a>
 									</div>
 									<div class="px-5 py-1">
-										<img src="img/logos/logo-10.png" alt="" class="img-fluid" style="max-width: 140px;">
+										<a href="https://www.youtube.com/@matandomatheus" target="_blank"><img src="img/logos/logo-3.png" alt="Matando Matheus a Grito" class="img-fluid" style="max-width: 90px;"></a>
 									</div>
 									<div class="px-5 py-1">
-										<img src="img/logos/logo-11.png" alt="" class="img-fluid" style="max-width: 140px;">
+										<a href="https://escoladacidade.edu.br" target="_blank"><img src="img/logos/logo-27.png" alt="Escola da Cidade" class="img-fluid" style="max-width: 190px;"></a>
 									</div>
 									<div class="px-5 py-1">
-										<img src="img/logos/logo-12.png" alt="" class="img-fluid" style="max-width: 100px;">
+										<a href="https://www.lojabifum.com.br" target="_blank"><img src="img/logos/logo-29.png" alt="Bifum" class="img-fluid" style="max-width: 180px;"></a>
 									</div>
 									<div class="px-5 py-1">
-										<img src="img/logos/logo-13.png" alt="" class="img-fluid" style="max-width: 100px;">
+										<a href="" target="_blank"><img src="img/logos/logo-4.png" alt="COS Suzano" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.facebook.com/bifumlamen/" target="_blank"><img src="img/logos/logo-31.png" alt="Bifum Lamen" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/lenoir.semijoias/" target="_blank"><img src="img/logos/logo-5.png" alt="LeNoir" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://agencia2205.com.br" target="_blank"><img src="img/logos/logo-6.png" alt="Agência 2205wv" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.oscarniemeyer.org.br/preobra" target="_blank"><img src="img/logos/logo-28.png" alt="Fundação Oscar Niemeyer" class="img-fluid" style="max-width: 240px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://segredomedico.com.br" target="_blank"><img src="img/logos/logo-7.png" alt="Segredo Médico" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://uivomobile.com" target="_blank"><img src="img/logos/logo-25.png" alt="UivoMobile" class="img-fluid" style="max-width: 110px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://acessure.com.br" target="_blank"><img src="img/logos/logo-8.png" alt="acéssure" class="img-fluid" style="max-width: 140px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/radarevoce/" target="_blank"><img src="img/logos/logo-9.png" alt="Radar&Você" class="img-fluid" style="max-width: 100px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-10.png" alt="LúDicca" class="img-fluid" style="max-width: 120px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://brilhantes-reforço.com.br" target="_blank"><img src="img/logos/logo-30.png" alt="Brilhantes Reforço Escolar" class="img-fluid" style="max-width: 160px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://vithapetclin.com.br" target="_blank"><img src="img/logos/logo-11.png" alt="Vitha Pet Clin" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.papeleparede.com.br/?srsltid=AfmBOoog0Y5thsrcQioiMMebllzAq56fxQ6xOboUFAbYcGrcr_7YD49p" target="_blank"><img src="img/logos/logo-12.png" alt="Papel & Parede" class="img-fluid" style="max-width: 140px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://escoladacidade.edu.br" target="_blank"><img src="img/logos/logo-27.png" alt="Escola da Cidade" class="img-fluid" style="max-width: 190px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/everesting5/" target="_blank"><img src="img/logos/logo-13.png" alt="Everesting5" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/bebazebrah/" target="_blank"><img src="img/logos/logo-14.png" alt="ZEBRAH" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/duramater_clinica/" target="_blank"><img src="img/logos/logo-15.png" alt="Dura-Mater Clínica" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.carbonfair.com.br/pt-br/cliente/plantage" target="_blank"><img src="img/logos/logo-16.png" alt="Plantage Essential Oils" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/freijoitinerante/" target="_blank"><img src="img/logos/logo-17.png" alt="Freijó Itinerante" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.elacomunica.com.br" target="_blank"><img src="img/logos/logo-18.png" alt="ELA Comunica" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.oscarniemeyer.org.br/preobra" target="_blank"><img src="img/logos/logo-28.png" alt="Fundação Oscar Niemeyer" class="img-fluid" style="max-width: 240px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://fernandaflor.com.br" target="_blank"><img src="img/logos/logo-19.png" alt="Fernanda Flor Studio Hair" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-20.png" alt="Detroit" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://barbeariaipiranga.com.br" target="_blank"><img src="img/logos/logo-21.png" alt="Barbearia Ipiranga" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-22.png" alt="Trufando Sonhos" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-23.png" alt="D'argent" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-24.png" alt="Chicletaria" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.lojabifum.com.br" target="_blank"><img src="img/logos/logo-29.png" alt="Bifum" class="img-fluid" style="max-width: 180px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/finanserio/" target="_blank"><img src="img/logos/logo-26.png" alt="Finansério" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://uivomobile.com" target="_blank"><img src="img/logos/logo-25.png" alt="UivoMobile" class="img-fluid" style="max-width: 120px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://brilhantes-reforço.com.br" target="_blank"><img src="img/logos/logo-30.png" alt="Brilhantes Reforço Escolar" class="img-fluid" style="max-width: 160px;"></a>
 									</div>
 								</span>
 							</div>
@@ -236,10 +326,7 @@
 							</a>
 							<ul class="list list-unstyled">
 								<li class="d-flex align-items-center mb-4">
-									<a href="mailto:porto@creative-agency-2.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">email@gmail.com</a>
-								</li>
-								<li class="d-flex align-items-center mb-4">
-									<a href="tel:8001234567" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">+55 11 99999-9999</a>
+									<a href="tel:11916037839" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">+55 11 91603-7839</a>
 								</li>
 							</ul>
 							<ul class="social-icons social-icons-clean social-icons-medium mb-5">
