--- a/demo-creative-agency-2-contact-us.html
+++ b/demo-creative-agency-2-contact-us.html
@@ -146,15 +146,15 @@
                                     <div class="col-auto">
                                         <h3 class="d-block text-color-grey positive-ls-3 font-weight-medium text-2 mb-1">número para contato</h3>
                                         <a href="tel:0123456789" class="d-flex align-items-center text-decoration-none text-color-dark text-color-hover-primary font-weight-bold text-3-5">
-                                            (800) 123-4567
+                                            +55 11 91603-7839
                                         </a>
                                     </div>
-                                    <div class="col-auto">
+                                    <!--<div class="col-auto">
                                         <h3 class="d-block text-color-grey positive-ls-3 font-weight-medium text-2 mb-1">nosso e-mail</h3>
                                         <a href="mailto:0123456789" class="d-flex align-items-center text-decoration-none text-color-dark text-color-hover-primary font-weight-bold text-3-5">
-                                            email@gmail.com
+                                            
                                         </a>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                             <div class="col-lg-6 appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="1600">
@@ -195,10 +195,7 @@
 							</a>
 							<ul class="list list-unstyled">
 								<li class="d-flex align-items-center mb-4">
-									<a href="mailto:porto@creative-agency-2.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">email@gmail.com</a>
-								</li>
-								<li class="d-flex align-items-center mb-4">
-									<a href="tel:8001234567" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">+55 11 99999-9999</a>
+									<a href="tel:11916037839" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">+55 11 91603-7839</a>
 								</li>
 							</ul>
 							<ul class="social-icons social-icons-clean social-icons-medium mb-5">
