--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -57,8 +57,8 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-creative-agency-2.html">
-											<img alt="Porto" height="40" src="img/demos/creative-agency-2/logo.svg">
+										<a href="index.html">
+											<img alt="CVCA" height="40" src="img/demos/creative-agency-2/logo.svg">
 										</a>
 									</div>
 								</div>
