--- a/demo-creative-agency-2-services.html
+++ b/demo-creative-agency-2-services.html
@@ -58,7 +58,7 @@
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="index.html">
-											<img alt="Porto" height="40" src="img/demos/creative-agency-2/logo.svg">
+											<img alt="CVCA" height="40" src="img/demos/creative-agency-2/logo.svg">
 										</a>
 									</div>
 								</div>
