--- a/demo-creative-agency-2-services.html
+++ b/demo-creative-agency-2-services.html
@@ -83,7 +83,7 @@
 											</nav>
 										</div>
 										<a class="btn btn-primary font-weight-semibold text-3 py-lg-3 text-light anim-hover-translate-top-5px transition-2ms ms-4" href="demo-creative-agency-2-contact-us.html"><span class="px-lg-4 d-block ws-nowrap">Contate-nos</span></a>
-										<button class="btn header-btn-collapse-nav text-dark" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav">
+										<button class="btn header-btn-collapse-nav text-light" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav">
 											<i class="fas fa-bars"></i>
 										</button>
 									</div>
