--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -190,14 +190,16 @@
                         <div class="row px-lg-3">
                         </div>
 
-						<div class="container py-1">
-							<div class="row custom-padding-top-1">
+						<!--PC-->
+						<div class="d-none d-lg-block container py-1">
+							<div class="row pt-5 mt-3">
 								<div class="col text-center">
-									<h3 class="text-7 text-transform-none font-weight-semibold mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Organizações atendidas por nosso escritório</h3>
+									<h3 class="text-7 text-transform-none font-weight-semibold my-4 pt-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Organizações atendidas por nosso escritório</h3>
 								</div>
 							</div>
 						</div>
-						<div class="appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="350">
+						
+						<div class="d-none d-lg-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="350">
 							<div class="marquee custom-marquee-1 pt-4 d-flex" data-duration="40000" data-gap="10" data-duplicated="true" data-startVisible="true">
 								<span class="d-flex align-items-center" data-clone-element="2">
 									<div class="px-5 py-1">
@@ -312,6 +314,130 @@
 							</div>
 						</div>
 
+
+						<!--Celular-->
+						<div class="d-block d-lg-none container py-1">
+							<div class="row pt-5 mt-3">
+								<div class="col text-center">
+									<h3 class="text-7 text-transform-none font-weight-semibold my-4 pt-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="250">Organizações atendidas por nosso escritório</h3>
+								</div>
+							</div>
+						</div>
+						
+						<div class="d-block d-lg-none appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="350">
+							<div class="marquee custom-marquee-1 pt-4 d-flex" data-duration="20000" data-gap="10" data-duplicated="true" data-startVisible="true">
+								<span class="d-flex align-items-center" data-clone-element="2">
+									<div class="px-5 py-1">
+										<a href="https://nelsonpneus.com.br" target="_blank"><img src="img/logos/logo-1.png" alt="Nelson Pneus" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.confeitariadocemagia.com.br" target="_blank"><img src="img/logos/logo-2.png" alt="Doce Magia" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.youtube.com/@matandomatheus" target="_blank"><img src="img/logos/logo-3.png" alt="Matando Matheus a Grito" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://escoladacidade.edu.br" target="_blank"><img src="img/logos/logo-27.png" alt="Escola da Cidade" class="img-fluid" style="max-width: 190px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.lojabifum.com.br" target="_blank"><img src="img/logos/logo-29.png" alt="Bifum" class="img-fluid" style="max-width: 180px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-4.png" alt="COS Suzano" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.facebook.com/bifumlamen/" target="_blank"><img src="img/logos/logo-31.png" alt="Bifum Lamen" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/lenoir.semijoias/" target="_blank"><img src="img/logos/logo-5.png" alt="LeNoir" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://agencia2205.com.br" target="_blank"><img src="img/logos/logo-6.png" alt="Agência 2205wv" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.oscarniemeyer.org.br/preobra" target="_blank"><img src="img/logos/logo-28.png" alt="Fundação Oscar Niemeyer" class="img-fluid" style="max-width: 240px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://segredomedico.com.br" target="_blank"><img src="img/logos/logo-7.png" alt="Segredo Médico" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://uivomobile.com" target="_blank"><img src="img/logos/logo-25.png" alt="UivoMobile" class="img-fluid" style="max-width: 110px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://acessure.com.br" target="_blank"><img src="img/logos/logo-8.png" alt="acéssure" class="img-fluid" style="max-width: 140px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/radarevoce/" target="_blank"><img src="img/logos/logo-9.png" alt="Radar&Você" class="img-fluid" style="max-width: 100px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-10.png" alt="LúDicca" class="img-fluid" style="max-width: 120px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://brilhantes-reforço.com.br" target="_blank"><img src="img/logos/logo-30.png" alt="Brilhantes Reforço Escolar" class="img-fluid" style="max-width: 160px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://vithapetclin.com.br" target="_blank"><img src="img/logos/logo-11.png" alt="Vitha Pet Clin" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.papeleparede.com.br/?srsltid=AfmBOoog0Y5thsrcQioiMMebllzAq56fxQ6xOboUFAbYcGrcr_7YD49p" target="_blank"><img src="img/logos/logo-12.png" alt="Papel & Parede" class="img-fluid" style="max-width: 140px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://escoladacidade.edu.br" target="_blank"><img src="img/logos/logo-27.png" alt="Escola da Cidade" class="img-fluid" style="max-width: 190px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/everesting5/" target="_blank"><img src="img/logos/logo-13.png" alt="Everesting5" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/bebazebrah/" target="_blank"><img src="img/logos/logo-14.png" alt="ZEBRAH" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/duramater_clinica/" target="_blank"><img src="img/logos/logo-15.png" alt="Dura-Mater Clínica" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.carbonfair.com.br/pt-br/cliente/plantage" target="_blank"><img src="img/logos/logo-16.png" alt="Plantage Essential Oils" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/freijoitinerante/" target="_blank"><img src="img/logos/logo-17.png" alt="Freijó Itinerante" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.elacomunica.com.br" target="_blank"><img src="img/logos/logo-18.png" alt="ELA Comunica" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.oscarniemeyer.org.br/preobra" target="_blank"><img src="img/logos/logo-28.png" alt="Fundação Oscar Niemeyer" class="img-fluid" style="max-width: 240px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://fernandaflor.com.br" target="_blank"><img src="img/logos/logo-19.png" alt="Fernanda Flor Studio Hair" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-20.png" alt="Detroit" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://barbeariaipiranga.com.br" target="_blank"><img src="img/logos/logo-21.png" alt="Barbearia Ipiranga" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-22.png" alt="Trufando Sonhos" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-23.png" alt="D'argent" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="" target="_blank"><img src="img/logos/logo-24.png" alt="Chicletaria" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.lojabifum.com.br" target="_blank"><img src="img/logos/logo-29.png" alt="Bifum" class="img-fluid" style="max-width: 180px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://www.instagram.com/finanserio/" target="_blank"><img src="img/logos/logo-26.png" alt="Finansério" class="img-fluid" style="max-width: 90px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://uivomobile.com" target="_blank"><img src="img/logos/logo-25.png" alt="UivoMobile" class="img-fluid" style="max-width: 120px;"></a>
+									</div>
+									<div class="px-5 py-1">
+										<a href="https://brilhantes-reforço.com.br" target="_blank"><img src="img/logos/logo-30.png" alt="Brilhantes Reforço Escolar" class="img-fluid" style="max-width: 160px;"></a>
+									</div>
+								</span>
+							</div>
+						</div>
                     </div>
 				</div>
 
