--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-
+		<meta name="google-site-verification" content="_pIWC1GcO0wb3HBywwSP692WqdEfWcaH0wqFwZcwhFs" />
 		<!-- Basic -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
