--- a/demo-creative-agency-2-services.html
+++ b/demo-creative-agency-2-services.html
@@ -8,9 +8,9 @@
 
 		<title>CVCA - Serviços</title>	
 
-		<meta name="keywords" content="WebSite Template" />
-		<meta name="description" content="Porto - Multipurpose Website Template">
-		<meta name="author" content="okler.net">
+		<meta name="keywords" content="CVCA Escritório de Advocacia" />
+		<meta name="description" content="O Correia & Vieira de Carvalho Advogados une tradição e inovação para oferecer soluções jurídicas estratégicas. Com décadas de experiência, atuamos em Direito Médico, Empresarial, Público, Propriedade Intelectual e mais, garantindo excelência e segurança para nossos clientes. ">
+		<meta name="author" content="correiaevieiradecarvalho.com.br">
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
