--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>CVCA</title>	
+		<title>Correia & Vieira de Carvalho Advogados | Excelência em Soluções Jurídicas</title>	
 
 		<meta name="keywords" content="CVCA Escritório de Advocacia" />
-		<meta name="description" content="O Correia & Vieira de Carvalho Advogados une tradição e inovação para oferecer soluções jurídicas estratégicas. Com décadas de experiência, atuamos em Direito Médico, Empresarial, Público, Propriedade Intelectual e mais, garantindo excelência e segurança para nossos clientes. ">
+		<meta name="description" content="Escritório Correia & Vieira de Carvalho Advogados: tradição e inovação para oferecer soluções jurídicas estratégicas em diversas áreas do Direito. ">
 		<meta name="author" content="correiaevieiradecarvalho.com.br">
 
+		<!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
+		<meta property="og:title" content="Correia & Vieira de Carvalho Advogados">
+		<meta property="og:description" content="Soluções jurídicas estratégicas em Direito Médico, Empresarial e Propriedade Intelectual.">
+		<meta property="og:image" content="https://correiaevieiradecarvalho.com.br/img/fotocvca.png">
+		<meta property="og:url" content="https://correiaevieiradecarvalho.com.br">
+		<meta property="og:type" content="website">
+
+		<!-- Twitter Card (Para exibição otimizada no Twitter) -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="Correia & Vieira de Carvalho Advogados">
+		<meta name="twitter:description" content="Soluções jurídicas estratégicas em diversas áreas do Direito.">
+		<meta name="twitter:image" content="https://correiaevieiradecarvalho.com.br/img/fotocvca.png">
+
+		<!-- Meta Robots (Para garantir indexação pelo Google) -->
+		<meta name="robots" content="index, follow">
+
+
+
+		
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
