--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -6,12 +6,31 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>CVCA - Sobre nós</title>	
+		<title>Quem Somos | Correia & Vieira de Carvalho Advogados</title>	
 
 		<meta name="keywords" content="CVCA Escritório de Advocacia" />
-		<meta name="description" content="O Correia & Vieira de Carvalho Advogados une tradição e inovação para oferecer soluções jurídicas estratégicas. Com décadas de experiência, atuamos em Direito Médico, Empresarial, Público, Propriedade Intelectual e mais, garantindo excelência e segurança para nossos clientes. ">
+		<meta name="description" content="Conheça a história e os valores do Correia & Vieira de Carvalho Advogados. Três gerações de experiência e compromisso com a excelência jurídica.">
 		<meta name="author" content="correiaevieiradecarvalho.com.br">
 
+		<!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
+		<meta property="og:title" content="Quem Somos | Correia & Vieira de Carvalho Advogados">
+		<meta property="og:description" content="Três gerações de excelência jurídica combinando tradição e inovação para soluções jurídicas seguras e eficazes.">
+		<meta property="og:image" content="https://correiaevieiradecarvalho.com.br/img/fotocvca.png">
+		<meta property="og:url" content="https://correiaevieiradecarvalho.com.br/sobre-nos">
+		<meta property="og:type" content="article">
+
+		<!-- Twitter Card (Para exibição otimizada no Twitter) -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="Quem Somos | Correia & Vieira de Carvalho Advogados">
+		<meta name="twitter:description" content="Três gerações de excelência jurídica combinando tradição e inovação para soluções jurídicas seguras e eficazes.">
+		<meta name="twitter:image" content="https://correiaevieiradecarvalho.com.br/img/fotocvca.png">
+
+		<!-- Meta Robots (Para garantir indexação pelo Google) -->
+		<meta name="robots" content="index, follow">
+
+
+
+		
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
