--- a/sitemap.html
+++ b/sitemap.html
@@ -123,12 +123,12 @@ Total pages: 5</span>
 
             <li class="lhead">/  <span class="lcount">5 pages</span></li>
             
-<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/" title="CVCA">CVCA</a></li>
-<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-about-us" title="CVCA - Sobre nós">CVCA - Sobre nós</a></li>
-<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-services" title="CVCA - Serviços">CVCA - Serviços</a></li>
-<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-contact-us" title="CVCA - Contate-nos">CVCA - Contate-nos</a></li>
+<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/" title="Correia &amp; Vieira de Carvalho Advogados | Excelência em Soluções Jurídicas">Correia & Vieira de Carvalho Advogados | Excelência em Soluções Jurídicas</a></li>
+<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-about-us" title="Quem Somos | Correia &amp; Vieira de Carvalho Advogados">Quem Somos | Correia & Vieira de Carvalho Advogados</a></li>
+<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-services" title="Nossos Serviços | Correia &amp; Vieira de Carvalho Advogados">Nossos Serviços | Correia & Vieira de Carvalho Advogados</a></li>
+<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-contact-us" title="Fale Conosco | Correia &amp; Vieira de Carvalho Advogados">Fale Conosco | Correia & Vieira de Carvalho Advogados</a></li>
 <li class="lpage last-page"><a href="https://correiaevieiradecarvalho.com.br/index
-														.html" title="CVCA">CVCA</a></li>
+														.html" title="Correia &amp; Vieira de Carvalho Advogados | Excelência em Soluções Jurídicas">Correia & Vieira de Carvalho Advogados | Excelência em Soluções Jurídicas</a></li>
 </ul>
 		<!--
 Please note:
