--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Quem Somos | Correia & Vieira de Carvalho Advogados</title>	
+		<title>Quem Somos | CVCA</title>	
 
 		<meta name="keywords" content="CVCA Escritório de Advocacia" />
 		<meta name="description" content="Conheça a história e os valores do Correia & Vieira de Carvalho Advogados. Três gerações de experiência e compromisso com a excelência jurídica.">
@@ -30,7 +30,7 @@
 
 
 
-		
+
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
