--- a/demo-creative-agency-2-services.html
+++ b/demo-creative-agency-2-services.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Nossos Serviços | Correia & Vieira de Carvalho Advogados</title>	
+		<title>Nossos Serviços | CVCA</title>	
 
 		<meta name="keywords" content="CVCA Escritório de Advocacia" />
 		<meta name="description" content="Atuamos em Direito Médico, Empresarial, Público, Propriedade Intelectual e mais. Descubra como podemos ajudar você ou sua empresa juridicamente.">
