--- a/demo-creative-agency-2-contact-us.html
+++ b/demo-creative-agency-2-contact-us.html
@@ -77,7 +77,7 @@
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="index.html">
-											<img alt="Porto" height="40" src="img/demos/creative-agency-2/logo.svg">
+											<img alt="logo CVCA" height="40" src="img/demos/creative-agency-2/logo.svg">
 										</a>
 									</div>
 								</div>
