--- a/demo-creative-agency-2-about-us.html
+++ b/demo-creative-agency-2-about-us.html
@@ -77,7 +77,7 @@
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="index.html">
-											<img alt="CVCA" height="40" src="img/demos/creative-agency-2/logo.svg">
+											<img alt="logo CVCA" height="40" src="img/demos/creative-agency-2/logo.svg">
 										</a>
 									</div>
 								</div>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="row px-lg-3 py-4">
                             <div class="col-lg-6 mb-5 mb-lg-0">
-                                <img src="img/demos/creative-agency-2/generic/generic-1.jpg" class="img-fluid custom-border-radius-1" alt="">
+                                <img src="img/demos/creative-agency-2/generic/generic-1.jpg" class="img-fluid custom-border-radius-1" alt="generic 1">
                             </div>
                             <div class="col-lg-6 ps-lg-4">
 
