--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 
-		
+
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
@@ -77,7 +77,7 @@
 								<div class="header-row">
 									<div class="header-logo">
 										<a href="index.html">
-											<img alt="CVCA" height="40" src="img/demos/creative-agency-2/logo.svg">
+											<img alt="logo CVCA" height="40" src="img/demos/creative-agency-2/logo.svg">
 										</a>
 									</div>
 								</div>
@@ -422,7 +422,7 @@
 								<div class="col-6 col-lg-3 bg-color-secondary--300">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
-											<img class="p-relative" src="img/demos/creative-agency-2/services/services-1-min.jpg" loading="lazy" alt="">
+											<img class="p-relative" src="img/demos/creative-agency-2/services/services-1-min.jpg" loading="lazy" alt="Direito Urbanístico">
 										</div>
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4 bg-color--tertiary--200">
@@ -442,7 +442,7 @@
 								<div class="col-6 col-lg-3 bg-color-secondary--200">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
-											<img class="p-relative" src="img/demos/creative-agency-2/services/services-2-min.jpg" loading="lazy" alt="">
+											<img class="p-relative" src="img/demos/creative-agency-2/services/services-2-min.jpg" loading="lazy" alt="Propriedade Intelectual">
 										</div>
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
@@ -461,7 +461,7 @@
 								<div class="col-6 col-lg-3 bg-color-secondary--100">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
-											<img class="p-relative" src="img/demos/creative-agency-2/services/services-3-min.jpg" loading="lazy" alt="">
+											<img class="p-relative" src="img/demos/creative-agency-2/services/services-3-min.jpg" loading="lazy" alt="Recuperação de Crédito">
 										</div>
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
@@ -480,7 +480,7 @@
 								<div class="col-6 col-lg-3 bg-color-secondary">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
-											<img class="p-relative" src="img/demos/creative-agency-2/services/services-4-min.jpg" loading="lazy" alt="">
+											<img class="p-relative" src="img/demos/creative-agency-2/services/services-4-min.jpg" loading="lazy" alt="Direito Imobiliário">
 										</div>
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
@@ -499,7 +499,7 @@
 								<div class="col-6 col-lg-3 bg-color-secondary">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
-											<img class="p-relative" src="img/demos/creative-agency-2/services/services-5-min.jpg" loading="lazy" alt="">
+											<img class="p-relative" src="img/demos/creative-agency-2/services/services-5-min.jpg" loading="lazy" alt="Tributário">
 										</div>
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
@@ -519,7 +519,7 @@
 								<div class="col-6 col-lg-3 bg-color-secondary--100">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
-											<img class="p-relative" src="img/demos/creative-agency-2/services/services-6-min.jpg" loading="lazy" alt="">
+											<img class="p-relative" src="img/demos/creative-agency-2/services/services-6-min.jpg" loading="lazy" alt="Agronegócio">
 										</div>
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
@@ -538,7 +538,7 @@
 								<div class="col-6 col-lg-3 bg-color-secondary--200">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
-											<img class="p-relative" src="img/demos/creative-agency-2/services/services-7-min.jpg" loading="lazy" alt="">
+											<img class="p-relative" src="img/demos/creative-agency-2/services/services-7-min.jpg" loading="lazy" alt="Empresarial e Societário">
 										</div>
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
@@ -557,7 +557,7 @@
 								<div class="col-6 col-lg-3 bg-color-secondary--300">
 									<div class="custom-grid-1-item h-100">
 										<div class="custom-grid-1-img">
-											<img class="p-relative" src="img/demos/creative-agency-2/services/services-8-min.jpg" loading="lazy" alt="">
+											<img class="p-relative" src="img/demos/creative-agency-2/services/services-8-min.jpg" loading="lazy" alt="Família e Sucessão">
 										</div>
 										<div class="custom-grid-1-text d-flex align-items-center h-100">
 											<div class="ps-4">
@@ -596,7 +596,7 @@
 									<div class="p-2 flex-fill">
 										<div class="custom-el-3 custom-border-radius-1 mx-auto appear-animation" data-appear-animation="zoomIn" data-appear-animation-delay="100" style="background-color: #2a64e7;">
 											<div class="custom-el-3-img">
-												<img class="p-relative" src="img/demos/creative-agency-2/concept/concept-1.jpg" loading="lazy" alt="">
+												<img class="p-relative" src="img/demos/creative-agency-2/concept/concept-1.jpg" loading="lazy" alt="concept 1">
 											</div>
 										</div>
 									</div>
@@ -606,7 +606,7 @@
 									<div class="p-2 flex-fill">
 										<div class="custom-el-3 custom-el-3-pos-1 bg-color-secondary custom-border-radius-3 mx-auto appear-animation" data-appear-animation="zoomIn" data-appear-animation-delay="300">
 											<div class="custom-el-3-img">
-												<img class="p-relative" src="img/demos/creative-agency-2/concept/concept-2.jpg" loading="lazy" alt="">
+												<img class="p-relative" src="img/demos/creative-agency-2/concept/concept-2.jpg" loading="lazy" alt="concept 2">
 											</div>
 										</div>
 									</div>
@@ -618,7 +618,7 @@
 									<div class="p-2 flex-fill">
 										<div class="custom-el-3  custom-border-radius-5 me-auto appear-animation" data-appear-animation="zoomIn" data-appear-animation-delay="500" style="background-color: #081B49;">
 											<div class="custom-el-3-img">
-												<img class="p-relative" src="img/demos/creative-agency-2/concept/concept-3.jpg" loading="lazy" alt="">
+												<img class="p-relative" src="img/demos/creative-agency-2/concept/concept-3.jpg" loading="lazy" alt="concept 3">
 											</div>
 										</div>
 									</div>
