--- a/sitemap.html
+++ b/sitemap.html
@@ -124,9 +124,9 @@ Total pages: 5</span>
             <li class="lhead">/  <span class="lcount">5 pages</span></li>
             
 <li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/" title="Correia &amp; Vieira de Carvalho Advogados | Excelência em Soluções Jurídicas">Correia & Vieira de Carvalho Advogados | Excelência em Soluções Jurídicas</a></li>
-<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-about-us" title="Quem Somos | Correia &amp; Vieira de Carvalho Advogados">Quem Somos | Correia & Vieira de Carvalho Advogados</a></li>
-<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-services" title="Nossos Serviços | Correia &amp; Vieira de Carvalho Advogados">Nossos Serviços | Correia & Vieira de Carvalho Advogados</a></li>
-<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-contact-us" title="Fale Conosco | Correia &amp; Vieira de Carvalho Advogados">Fale Conosco | Correia & Vieira de Carvalho Advogados</a></li>
+<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-about-us" title="Quem Somos | CVCA">Quem Somos | CVCA</a></li>
+<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-services" title="Nossos Serviços | CVCA">Nossos Serviços | CVCA</a></li>
+<li class="lpage"><a href="https://correiaevieiradecarvalho.com.br/demo-creative-agency-2-contact-us" title="Fale Conosco | CVCA">Fale Conosco | CVCA</a></li>
 <li class="lpage last-page"><a href="https://correiaevieiradecarvalho.com.br/index
 														.html" title="Correia &amp; Vieira de Carvalho Advogados | Excelência em Soluções Jurídicas">Correia & Vieira de Carvalho Advogados | Excelência em Soluções Jurídicas</a></li>
 </ul>
